Carosel added, need to fix the visibility of the buttons
It works ok, needs looking at more but can slide through projects now. Need to consider the game section too.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -816,12 +816,166 @@ input::-ms-input-placeholder {
 
 .about .single_service .single_service_content {}
 
+/* LATEST PROJECTS */
+/* GAMES PROJECTS */
+
+.game {
+    width: 100%;
+    height: 210px; /* Adjust as needed for the height */
+    background-size: cover;
+    background-position: center;
+    margin-bottom: 5em;
+    position: relative;
+    overflow: hidden;
+    border-radius: 15px;
+    transition: 0.4s;
+}
+
+.game:after {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    content: '';
+    z-index: -2;
+    background: rgba(0, 0, 0, 0.3);
+    opacity: 0;
+    transition: 0.5s;
+}
+
+.game:hover {
+    transform: scale(1.025);
+    z-index: -100;
+}
+
+.game-content {
+    width: auto;
+    padding-bottom: 7em;
+    text-align: center;
+}
+
+.game-content a {
+    display: block;
+}
+
+.game-content .col-forth {
+    width: 33.333%;
+    top: 0;
+    padding: 1.5%;
+    float: left;
+}
+
+@media screen and (max-width: 1300px) {
+    .game-content .col-forth {
+        margin: 0 auto;
+        width: 70%;
+        float: none;
+    }
+}
+
+@media screen and (max-width: 1115px) {
+    .game-content .col-forth {
+        margin: 0 auto;
+        width: 80%;
+        float: none;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .game-content .col-forth {
+        width: 100%;
+    }
+}
+
+.game-content .col-forth .game {
+    background-size: cover;
+    background-position: top center;
+    background-repeat: no-repeat;
+    border-radius: 15px;
+    z-index: 3;
+    position: relative;
+    overflow: hidden;
+    margin-bottom: 0px;
+    transition: 0.4s;
+}
+.game-content .col-forth .game:after {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    content: '';
+    z-index: -2;
+    background: rgba(0, 0, 0, 0.3);
+    opacity: 0;
+    -webkit-transition: 0.5s;
+    -o-transition: 0.5s;
+    transition: 0.5s;
+}
+
+
+/* LATEST PROJECTS */
 .project {
     width: 100%;
     float: left;
     margin-bottom: 5em;
 }
 
+
+.project-content {
+    width: auto;
+    padding-bottom: 7em;
+    text-align: center;
+}
+
+.project-content a {
+    display: block;
+}
+
+.project-content .col-forth {
+    width: 100%;
+    top:0;
+    padding:1.5%;
+    float:left;
+
+}
+
+@media screen and (max-width: 1300px) {
+    .project-content .col-forth {
+        margin: 0 auto;
+        width: 100%;
+        float:none;
+    }
+}
+
+@media screen and (max-width: 1115px) {
+    .project-content .col-forth {
+        margin: 0 auto;
+        width: 80%;
+        float:none;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .project-content .col-forth {
+        width: 100%;
+    }
+}
+
+.project-content .col-forth .project {
+    background-size: cover;
+    background-position: top center;
+    background-repeat: no-repeat;
+    border-radius: 15px;
+    z-index: 3;
+    position: relative;
+    overflow: hidden;
+    margin-bottom: 0px;
+    -webkit-transition: 0.4s;
+    -o-transition: 0.4s;
+    transition: 0.4s;
+}
 
 /* Clients animation section */
 
@@ -1365,6 +1519,51 @@ a:active {
 .main_footer .right_menu li a {
     color: #fff;
 }
+.owl-nav .nav-btn {
+    position: absolute;
+    top: 50%;
+    width: 50px; /* Increased width */
+    height: 50px; /* Increased height */
+    background-color: rgba(0, 0, 0, 0.7); /* More opaque background */
+    color: white;
+    text-align: center;
+    line-height: 50px; /* Center text vertically */
+    font-size: 1.5rem; /* Increased font size */
+    cursor: pointer;
+    z-index: 1000;
+    border-radius: 50%;
+    transform: translateY(-50%);
+    border: 2px solid white; /* White border for better visibility */
+}
+
+.owl-nav .prev-slide {
+    left: -60px; /* Adjust positioning as needed */
+}
+
+.owl-nav .next-slide {
+    right: -60px; /* Adjust positioning as needed */
+}
+
+.owl-nav .nav-btn:hover {
+    background-color: rgba(0, 0, 0, 0.9); /* Darker on hover */
+}
+
+  .prev-slide {
+    left: -50px; /* Adjust as needed */
+  }
+  
+  .next-slide {
+    right: -50px; /* Adjust as needed */
+  }
+  
+  .owl-carousel .owl-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  
+
 
 .copyright_text p {
     color: #fff;
@@ -1472,61 +1671,6 @@ a:active {
     margin: 0 auto;
 }
 
-.project-content {
-    width: auto;
-    padding-bottom: 7em;
-    text-align: center;
-}
-
-.project-content a {
-    display: block;
-}
-
-.project-content .col-forth {
-    width: 33.333%;
-    top:0;
-    padding:1.5%;
-    float:left;
-
-}
-
-@media screen and (max-width: 1300px) {
-    .project-content .col-forth {
-        margin: 0 auto;
-        width: 70%;
-        float:none;
-    }
-}
-
-@media screen and (max-width: 1115px) {
-    .project-content .col-forth {
-        margin: 0 auto;
-        width: 80%;
-        float:none;
-    }
-}
-
-
-
-@media screen and (max-width: 480px) {
-    .project-content .col-forth {
-        width: 100%;
-    }
-}
-
-.project-content .col-forth .project {
-    background-size: cover;
-    background-position: top center;
-    background-repeat: no-repeat;
-    border-radius: 15px;
-    z-index: 3;
-    position: relative;
-    overflow: hidden;
-    margin-bottom: 0px;
-    -webkit-transition: 0.4s;
-    -o-transition: 0.4s;
-    transition: 0.4s;
-}
 
 .game-heading {
     margin-top: 15px; /* Adjust the value as needed */
